--- a/OctagonPlatform/OctagonPlatform.csproj
+++ b/OctagonPlatform/OctagonPlatform.csproj
@@ -237,6 +237,7 @@
     <Compile Include="Helpers\CalculationMethod.cs" />
     <Compile Include="Helpers\CheckSplitAmountsEntry.cs" />
     <Compile Include="Helpers\CommunicationType.cs" />
+    <Compile Include="Helpers\ConvertTo.cs" />
     <Compile Include="Helpers\DateTimeValidationLesserThan.cs" />
     <Compile Include="Helpers\DisputeType.cs" />
     <Compile Include="Helpers\Email.cs" />
