--- a/OctagonPlatform/OctagonPlatform.csproj
+++ b/OctagonPlatform/OctagonPlatform.csproj
@@ -1228,6 +1228,7 @@
     <Content Include="Views\Terminals\Sections\Pictures.cshtml" />
     <Content Include="Views\Terminals\Sections\VaultCash.cshtml" />
     <Content Include="Views\Terminals\Sections\Surcharge.cshtml" />
+    <Content Include="Views\InterChange\Modal\AddInterChange.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
