--- a/OctagonPlatform/OctagonPlatform.csproj
+++ b/OctagonPlatform/OctagonPlatform.csproj
@@ -319,6 +319,7 @@
     <Compile Include="Models\FormsViewModels\BAccountFVModel.cs" />
     <Compile Include="Models\FormsViewModels\BAEditFVModel.cs" />
     <Compile Include="Models\FormsViewModels\BindKeyViewModel.cs" />
+    <Compile Include="Models\FormsViewModels\TransDailyViewModel.cs" />
     <Compile Include="Models\FormsViewModels\TerminalStatusFormFilterVM.cs" />
     <Compile Include="Models\FormsViewModels\CashManagementVM.cs" />
     <Compile Include="Models\FormsViewModels\CashLoadViewModel.cs" />
@@ -401,6 +402,7 @@
     <Compile Include="PersistanceRepository\Utils.cs" />
     <Compile Include="PersistanceRepository\VaultCashRespository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\ReportsSmart\ViewModels\TransDailyTableVM.cs" />
     <Compile Include="Views\ReportsSmart\ViewModels\CashLoadTableVM.cs" />
     <Compile Include="Views\ReportsSmart\ViewModels\CashManagementTableVM.cs" />
     <Compile Include="Views\ReportsSmart\ViewModels\TerminalStatusTableVM.cs" />
@@ -1214,6 +1216,8 @@
     <Content Include="Views\Shared\_Grid.cshtml" />
     <Content Include="Views\ReportsSmart\_PartialTableMorris.cshtml" />
     <Content Include="Views\ReportsSmart\TerminalStatus.cshtml" />
+    <Content Include="Views\ReportsSmart\DailyTransactionSummary.cshtml" />
+    <Content Include="Views\ReportsSmart\_PartialTableDailyTransaction.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
