--- a/OctagonPlatform/Web.config
+++ b/OctagonPlatform/Web.config
@@ -17,12 +17,18 @@
   </configSections>
   <connectionStrings>
     <!--Cada vez que se haga un update database hacerlo tambien para mi data base local-->
-   <!-- <add name="LocalConection" connectionString="Server=tcp:xyncro.database.windows.net,1433;Initial Catalog=octagonNewTest;Persist Security Info=False;User ID=xyncroadminsa;Password=xyncro2017!@;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;
-         Connection Timeout=30; " providerName="System.Data.SqlClient" />-->
-      <add name="LocalConection" connectionString="Data Source=DESKTOP-3VCQ05F\SQLEXPRESS;Initial Catalog=octagon;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" />
 
-   <!-- <add name="LocalConection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=Octagon4;Integrated Security=True" providerName="System.Data.SqlClient" />-->
-    <!--<add name="LocalConection" connectionString="Data Source=DESKTOP-I1KBFAR\SQLEXPRESS;Initial Catalog=octagon10;Integrated Security=True"
+    <!-- <add name="LocalConection" connectionString="Server=tcp:xyncro.database.windows.net,1433;Initial Catalog=octagondeveloper;Persist Security Info=False;User ID=xyncroadminsa;Password=xyncro2017!@;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;
+         Connection Timeout=30; " providerName="System.Data.SqlClient" />
+     <add name="LocalConection" connectionString="Data Source=DESKTOP-3VCQ05F\SQLEXPRESS;Initial Catalog=octagon;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" />-->
+
+      <add name="LocalConection" connectionString="Server=tcp:xyncro.database.windows.net,1433;Initial Catalog=octagonNewTest;Persist Security Info=False;User ID=xyncroadminsa;Password=xyncro2017!@;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;
+         Connection Timeout=30; " providerName="System.Data.SqlClient" />
+     <!--<add name="LocalConection" connectionString="Data Source=DESKTOP-3VCQ05F\SQLEXPRESS;Initial Catalog=octagon;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" />
+-->
+
+   <!-- <add name="LocalConection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=Octagon4;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="LocalConection" connectionString="Data Source=DESKTOP-I1KBFAR\SQLEXPRESS;Initial Catalog=octagon10;Integrated Security=True"
       providerName="System.Data.SqlClient"/>-->
   </connectionStrings>
   <appSettings>
