--- a/OctagonPlatform/OctagonPlatform.csproj
+++ b/OctagonPlatform/OctagonPlatform.csproj
@@ -336,6 +336,7 @@
     <Compile Include="Models\FormsViewModels\BAccountFVModel.cs" />
     <Compile Include="Models\FormsViewModels\BAEditFVModel.cs" />
     <Compile Include="Models\FormsViewModels\BindKeyViewModel.cs" />
+    <Compile Include="Models\FormsViewModels\TransMonthlyViewModel.cs" />
     <Compile Include="Models\FormsViewModels\TransDailyViewModel.cs" />
     <Compile Include="Models\FormsViewModels\TerminalStatusFormFilterVM.cs" />
     <Compile Include="Models\FormsViewModels\CashManagementVM.cs" />
@@ -420,6 +421,7 @@
     <Compile Include="PersistanceRepository\Utils.cs" />
     <Compile Include="PersistanceRepository\VaultCashRespository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\ReportsSmart\ViewModels\TransMonthlyTableVM.cs" />
     <Compile Include="Views\ReportsSmart\ViewModels\TransDailyTableVM.cs" />
     <Compile Include="Views\ReportsSmart\ViewModels\CashLoadTableVM.cs" />
     <Compile Include="Views\ReportsSmart\ViewModels\CashManagementTableVM.cs" />
@@ -1246,6 +1248,8 @@
     <Content Include="Views\TerminalContacts\Modal\AddTerminalContact.cshtml" />
     <Content Include="Views\TerminalContacts\ContactForm.cshtml" />
     <Content Include="Views\Users\Sections\TerminalsPartner.cshtml" />
+    <Content Include="Views\ReportsSmart\MonthlyTransactionSummary.cshtml" />
+    <Content Include="Views\ReportsSmart\_PartialTableMonthlyTransaction.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
