--- a/OctagonPlatform/OctagonPlatform.csproj
+++ b/OctagonPlatform/OctagonPlatform.csproj
@@ -339,6 +339,7 @@
     <Compile Include="Models\FormsViewModels\TerminalCassetteVM.cs" />
     <Compile Include="Models\FormsViewModels\TerminalDocumentsVM.cs" />
     <Compile Include="Models\FormsViewModels\TerminalNotesVM.cs" />
+    <Compile Include="Models\FormsViewModels\TerminalPicturesVM.cs" />
     <Compile Include="Models\FormsViewModels\TransDailyViewModel.cs" />
     <Compile Include="Models\FormsViewModels\TerminalStatusFormFilterVM.cs" />
     <Compile Include="Models\FormsViewModels\CashManagementVM.cs" />
