--- a/OctagonPlatform/OctagonPlatform.csproj
+++ b/OctagonPlatform/OctagonPlatform.csproj
@@ -404,6 +404,7 @@
     <Compile Include="Models\TerminalContact.cs" />
     <Compile Include="Models\TerminalMessage.cs" />
     <Compile Include="Models\TerminalPicture.cs" />
+    <Compile Include="Models\FormsViewModels\TerminalSurchargeVM.cs" />
     <Compile Include="Models\TerminalWorkingHours.cs" />
     <Compile Include="Models\Transaction.cs" />
     <Compile Include="Models\TransactionStatistic.cs" />
