--- a/OctagonPlatform/OctagonPlatform.csproj
+++ b/OctagonPlatform/OctagonPlatform.csproj
@@ -1270,6 +1270,7 @@
     <Content Include="Views\Shared\_LayoutOctagonDashboard.cshtml" />
     <Content Include="Views\Shared\Sections\OctagonNavBar.cshtml" />
     <Content Include="Views\Shared\Sections\OctagonSidebar.cshtml" />
+    <Content Include="Views\Octagon\Cryptoxone.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
