--- a/OctagonPlatform/OctagonPlatform.csproj
+++ b/OctagonPlatform/OctagonPlatform.csproj
@@ -1272,7 +1272,7 @@
     <Content Include="Views\Shared\_LayoutOctagonDashboard.cshtml" />
     <Content Include="Views\Shared\Sections\OctagonNavBar.cshtml" />
     <Content Include="Views\Shared\Sections\OctagonSidebar.cshtml" />
-    <Content Include="Views\Octagon\Cryptoxone.cshtml" />
+    <Content Include="Views\Octagon\CryptoXone.cshtml" />
     <Content Include="Views\Octagon\BeComm.cshtml" />
     <Content Include="Views\Octagon\AVT.cshtml" />
     <Content Include="Views\Octagon\DemMoney.cshtml" />
