--- a/OctagonPlatform/OctagonPlatform.csproj
+++ b/OctagonPlatform/OctagonPlatform.csproj
@@ -765,7 +765,7 @@
     <Content Include="Octagon\assets\css\styles2.css" />
     <Content Include="Octagon\assets\data\flot-data.js" />
     <Content Include="Octagon\assets\data\AMS-data.js" />
-    <Content Include="Octagon\assets\data\morris-data.js" />
+    <Content Include="Octagon\assets\data\AMS-Dashboard-data.js" />
     <Content Include="Octagon\assets\fonts\font-awesome.min.css" />
     <Content Include="Octagon\assets\fonts\fontawesome-webfont.svg" />
     <Content Include="Octagon\assets\fonts\simple-line-icons.min.css" />
