--- a/OctagonPlatform/OctagonPlatform.csproj
+++ b/OctagonPlatform/OctagonPlatform.csproj
@@ -323,6 +323,10 @@
     <Compile Include="Migrations\201712270518359_addintpartner.Designer.cs">
       <DependentUpon>201712270518359_addintpartner.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201801032107211_schedule.cs" />
+    <Compile Include="Migrations\201801032107211_schedule.Designer.cs">
+      <DependentUpon>201801032107211_schedule.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
     <Compile Include="Models\BankAccount.cs" />
@@ -1314,6 +1318,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201712270518359_addintpartner.resx">
       <DependentUpon>201712270518359_addintpartner.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201801032107211_schedule.resx">
+      <DependentUpon>201801032107211_schedule.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
